[package]
name = "kvs"
version = "0.1.0"
description = "a key-value server"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version="2.33.0", features = ["yaml"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"