[package]
name = "kvs"
version = "0.1.0"
description = "a key-value server"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version="2.33.0", features = ["yaml"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.2"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
bincode = "1.1.4"
sled = "0.28.0"
crossbeam = "0.7.2"
num_cpus = "1.10.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false