[package]
name = "raft"
version = "0.1.0"
authors = [
    "Neil Shen <overvenus@gmail.com>",
    "ShuNing <nolouch@gmail.com>",
    "Connor <zbk602423539@gmail.com>",
    "庄天翼 <zty0826@gmail.com>",
    "MIT 6.824 <6824-staff@lists.csail.mit.edu>"
]
edition = "2018"
publish = false

[dependencies]
labrpc = { path = "../labrpc" }
labcodec = { path = "../labcodec" }
linearizability = { path = "../linearizability"}
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4.7"
rand = "0.4"
log = "0.4"
futures = "0.1"
futures03 = {version = "0.3.1", package = "futures"}
futures-timer = "0.1"
crossbeam = "0.7.2"
tokio = "0.1.22"
tokio02 = {version = "0.2.6", package = "tokio", features = ["time"]}
tokio-timer = "0.3.0-alpha.3"

[dev-dependencies]
env_logger = "0.7.1"

[build-dependencies]
prost-build = "0.5"
